<resources>
    <string name="app_name">Smart Learning</string>
    <string name="question">Why we need to do algorithm analysis?</string>
    <string name="opA">We analyze available algorithms to find and implement the best suitable algorithm.</string>
    <string name="opB">For the sake of finding time complexities</string>
    <string name="opC">For building knowledge about the given algorithms</string>
    <string name="opD">It is not necessary to do algorithm analysis</string>
    <string name="hint">Hint</string>
    <string name="sol">Solution</string>
    <string name="ans">Answer</string>
    <string name="question_no">Question</string>
    <string name="app_intro">App Intro</string>
    <string name="main_activity_label">Choose Topic</string>
    <string name="level_activity_label">Choose Level</string>
    <string name="basic">Basic</string>
    <string name="got_it">GOT IT!</string>
    <string name="submit">Submit</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="warning_message">Are you sure you want to submit? your score is :</string>
    <string name="hint_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="user_login">User Login</string>
    <string name="not_have_an_account_signup_here">Don\'t have an account? Register Here</string>
    <string name="already_have_an_account">Already have an account !</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user_signup">User Signup</string>
    <string name="user_id">User ID :</string>
    <string name="email_id">Email Id :</string>
    <string name="choose_topic">Choose Topic</string>
    <string name="choose_level">Choose Level</string>
    <string name="Submit">Submit</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <!--<item>Photos</item>-->
        <!--<item>Movies</item>-->
        <item>Admin Console</item>
        <item>Settings</item>
    </string-array>

    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Admin Console</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="action_logout">Logout</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
</resources>